1. Удаление всех заметок из корзины

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="date_label">date</string>
     <string name="apply_sort">Apply sort</string>
     <string name="notes_search">Notes search</string>
+    <string name="delete_all">Delete all</string>
 </resources>
